click events trigger audio; all tests passing

--- a/index.html
+++ b/index.html
@@ -14,21 +14,54 @@
         <div id="inner-display">
             <div id="drum-pads-container">
                 <div class="row">
-                    <div class="drum-pad" id="q">Q</div>
-                    <div class="drum-pad" id="w">W</div>
-                    <div class="drum-pad" id="e">E</div>
+                    <div class="drum-pad" id="drum-1">Q
+                        <audio class="clip" id="Q" controls style="display: none;" 
+                        src="https://s3.amazonaws.com/freecodecamp/drums/Heater-1.mp3" type="audio/mp3">
+                        </audio>
+                    </div>
+
+                    <div class="drum-pad" id="drum-2">W
+                        <audio class="clip" id="W" controls style="display: none;" 
+                        src="https://s3.amazonaws.com/freecodecamp/drums/Heater-2.mp3" type="audio/mp3">
+                        </audio>
+                    </div>
+
+                    <div class="drum-pad" id="drum-3">E
+                        <audio class="clip" id="E" controls style="display: none;" src="https://s3.amazonaws.com/freecodecamp/drums/Heater-3.mp3" type="audio/mp3">
+                        </audio>
+                    </div>
                 </div>
 
                 <div class="row">
-                    <div class="drum-pad" id="a">A</div>
-                    <div class="drum-pad" id="s">S</div>
-                    <div class="drum-pad" id="d">D</div>
+                    <div class="drum-pad" id="drum-4">A
+                        <audio class="clip" id="A" controls style="display: none;" src="https://s3.amazonaws.com/freecodecamp/drums/Heater-4_1.mp3" type="audio/mp3">
+                        </audio>
+                    </div>
+
+                    <div class="drum-pad" id="drum-5">S
+                        <audio class="clip" id="S" controls style="display: none;" src="https://s3.amazonaws.com/freecodecamp/drums/Heater-6.mp3" type="audio/mp3">
+                        </audio>
+                    </div>
+
+                    <div class="drum-pad" id="drum-6">D
+                        <audio class="clip" id="D" controls style="display: none;" src="https://s3.amazonaws.com/freecodecamp/drums/Dsc_Oh.mp3" type="audio/mp3">
+                        </audio>
+                    </div>
                 </div>
 
                 <div class="row">
-                    <div class="drum-pad" id="z">Z</div>
-                    <div class="drum-pad" id="x">X</div>
-                    <div class="drum-pad" id="c">C</div>
+                    <div class="drum-pad" id="drum-7">Z
+                        <audio class="clip" id="Z" controls style="display: none;" src="https://s3.amazonaws.com/freecodecamp/drums/Kick_n_Hat.mp3" type="audio/mp3">
+                        </audio>
+                    </div>
+                    <div class="drum-pad" id="drum-8">X
+                        <audio class="clip" id="X" controls style="display: none;" src="https://s3.amazonaws.com/freecodecamp/drums/RP4_KICK_1.mp3" type="audio/mp3">
+                        </audio>
+                    </div>
+                    <div class="drum-pad" id="drum-9">C
+                        <audio class="clip" id="C" controls style="display: none;" src="https://s3.amazonaws.com/freecodecamp/drums/Cev_H2.mp3" type="audio/mp3">
+                        </audio>
+                    </div>
                 </div>
             </div>
 
